--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <title>A Night In Japan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- just .css not .scss coz jekyll will do for us -->
