--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -16,7 +16,7 @@ body {
 
     font-family: $typography, arial;
     font-weight: 300;
-    line-height: 1.3;
+    line-height: 1.5;
 
     max-width: 780px;
     margin: 80px auto 80px auto;
@@ -82,4 +82,20 @@ div.circle {
     height: 500px;
     background-color: $red;
     border-radius: 50%;
+}
+
+div.post {
+
+    h3 {
+        margin-top: 80px;
+    }
+
+    p {
+        max-width: 700px;
+        margin-bottom: 40px;
+    }
+
+    img {
+        max-width: 780px;
+    }
 }
