fixed navigation and images

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -51,8 +51,17 @@ header {
 section {
     margin: 40px 0 0 0;
 }
-    
-nav a, p a {
+
+nav a {
+    color:$black;
+    text-decoration: none;
+}
+
+img {
+    max-width: 780px;
+}
+
+nav a.selected, p a {
     color:$black;
     text-decoration: none;
     border-bottom: 3px solid $red;
@@ -98,12 +107,4 @@ div.post {
     img {
         max-width: 780px;
     }
-}
-
-section {
-
-    img {
-        max-width: 780px;
-    }
-
 }
